--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JONES PORTFOLIO</title>
+    <title>JONES</title>
     <link rel="stylesheet" href="dark.css" id="theme-stylesheet">
     <link rel="stylesheet" href="mountain.css" id="mountain-stylesheet" disabled>
+    <link rel="stylesheet" href="cyber.css" id="cyber-stylesheet" disabled>
 </head>
 <body>
     <div class="container">
         <header>
             <h1 class="header-text" data-text="JONES PORTFOLIO">JONES PORTFOLIO</h1>
-            <p class="subtitle">Creating software, cyber and investigative projects</p>
+            <p class="subtitle">Creating cyber security and investigative software projects</p>
         </header>
 
         <div class="audio-section">
@@ -20,9 +21,10 @@
             </button>
             <audio id="audioPlayer" src="audio/dark.mp3"></audio>
             <audio id="mountainAudio" src="audio/mountain.mp3"></audio>
+            <audio id="cyberAudio" src="audio/cyber.mp3"></audio>
         </div>
 
-        <!-- <button id="themeToggle" class="theme-toggle">Toggle: Mountain Mode</button> -->
+        <button id="themeToggle" class="theme-toggle">Mountain Mode</button>
 
         <main>
             <section class="projects-section">
@@ -39,20 +41,20 @@
                             </div>
                         </div>
                     </a>
-                    <div class="project-card">
-                        <img src="img2" alt="Project 2" class="project-image">
+                    <div class="project-card modal-trigger" data-project="2">
+                        <img src="..." alt="Project 2" class="project-image">
                         <div class="project-overlay">
-                            <h3 data-text="#002">#002</h3>
+                            <h3 data-text="#002">D4T</h3>
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="" alt="Project 3" class="project-image">
+                        <img src="..." alt="Project 3" class="project-image">
                         <div class="project-overlay">
                             <h3 data-text="#003">#003</h3>
                         </div>
                     </div>
-                    <div class="project-card">
-                        <img src="" alt="Project 4" class="project-image">
+                    <div class="project-card modal-trigger" data-project="4">
+                        <img src="..." alt="Project 4" class="project-image">
                         <div class="project-overlay">
                             <h3 data-text="#004">#004</h3>
                         </div>
@@ -60,6 +62,14 @@
                 </div>
             </section>
         </main>
+    </div>
+
+    <div id="projectModal" class="modal">
+        <div class="modal-content">
+            <span class="modal-close">&times;</span>
+            <div class="modal-header" id="modalHeader"></div>
+            <div class="modal-body" id="modalBody"></div>
+        </div>
     </div>
 
     <script src="script.js"></script>
