--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <div class="project-card">
                             <div class="project-content">
                                 <div class="project-icon"></div>
+                                <img src="images/input3.bmp" alt="Project 1" class="project-image">
                                 <div class="project-overlay">
                                     <h3 data-text="Steganography Project">Steganography Project</h3>
                                     <p class="project-description" data-text="Image embedding and extraction">Image embedding and extraction</p>
