--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <title>JONES</title>
     <link rel="stylesheet" href="dark.css" id="theme-stylesheet">
     <link rel="stylesheet" href="mountain.css" id="mountain-stylesheet" disabled>
-    <link rel="stylesheet" href="cyber.css" id="cyber-stylesheet" disabled>
 </head>
 <body>
+    <div id="vhs-loader" class="vhs-loader">
+        <div class="vhs-black-bar vhs-black-bar-top"></div>
+        <div class="vhs-screen">
+            <div class="vhs-static-right"></div>
+            <div class="vhs-osd">
+                <div class="vhs-osd-top-left">PLAY ▶</div>
+                <div class="vhs-osd-top-right">--:--</div>
+                <div class="vhs-osd-bottom-left">0:00:00</div>
+                <div class="vhs-osd-bottom-right">SP</div>
+            </div>
+        </div>
+        <div class="vhs-black-bar vhs-black-bar-bottom"></div>
+        <audio id="vhsAudio" src="audio/VHS.mp3"></audio>
+    </div>
+
     <div class="container">
         <header>
-            <h1 class="header-text" data-text="JONES PORTFOLIO">JONES PORTFOLIO</h1>
+            <h1 class="header-text" data-text="JONES"><span id="typing-text"></span><span class="typing-cursor">|</span></h1>
             <p class="subtitle">Creating cyber security and investigative software projects</p>
         </header>
 
@@ -21,14 +35,44 @@
             </button>
             <audio id="audioPlayer" src="audio/dark.mp3"></audio>
             <audio id="mountainAudio" src="audio/mountain.mp3"></audio>
-            <audio id="cyberAudio" src="audio/cyber.mp3"></audio>
         </div>
 
         <button id="themeToggle" class="theme-toggle">Mountain Mode</button>
 
         <main>
+            <section id="about" class="about-section">
+                <h2 class="section-title">About</h2>
+                <div class="about-content">
+                    <p class="about-text">Cybersecurity professional and software developer specializing in developing digital forensics, investigative tools and security solutions.</p>
+                    <div class="skills-grid">
+                        <div class="skill-category">
+                            <h3>Languages</h3>
+                            <div class="skill-items">
+                                <span class="skill-item">Rust</span>
+                                <span class="skill-item">Go</span>
+                                <span class="skill-item">Python</span>
+                                <span class="skill-item">JavaScript</span>
+                                <span class="skill-item">TypeScript</span>
+                                <span class="skill-item">C</span>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <h3>Frameworks & Tools</h3>
+                            <div class="skill-items">
+                                <span class="skill-item">AngularJS</span>
+                                <span class="skill-item">WebAssembly</span>
+                                <span class="skill-item">OpenLayers</span>
+                                <span class="skill-item">Git</span>
+                                <span class="skill-item">Docker</span>
+                                <span class="skill-item">Linux</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <section class="projects-section">
-                <h2 class="section-title"></h2>
+                <h2 class="section-title">Projects</h2>
                 <div class="projects-grid">
                     <a href="https://github.com/AJ-I-I/Steganography-Program" target="_blank" rel="noopener noreferrer" class="project-card-link">
                         <div class="project-card">
@@ -59,6 +103,46 @@
                         <div class="project-overlay">
                             <h3 data-text="#004">#004</h3>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="contact" class="contact-section">
+                <h2 class="section-title">Contact</h2>
+                <div class="contact-content">
+                    <div class="contact-info">
+                        <p>Get in touch for inquiries, or discussions.</p>
+                        <div class="social-links">
+                            <a href="mailto:contact@example.com" class="social-link" target="_blank" rel="noopener noreferrer">
+                                <span class="social-icon">Email</span>
+                                <span class="social-text">JJD3T2000@gmail.com</span>
+                            </a>
+                            <a href="https://github.com/AJ-I-I" class="social-link" target="_blank" rel="noopener noreferrer">
+                                <span class="social-icon">GitHub</span>
+                                <span class="social-text">GitHub Profile</span>
+                            </a>
+                            <a href="https://www.linkedin.com/in/harry-jones-672113255/" class="social-link" target="_blank" rel="noopener noreferrer">
+                                <span class="social-icon">LinkedIn</span>
+                                <span class="social-text">LinkedIn Profile</span>
+                            </a>
+                        </div>
+                        <!--
+                        <form id="contactForm" class="contact-form">
+                        <div class="form-group">
+                            <label for="contactName">Name</label>
+                            <input type="text" id="contactName" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="contactEmail">Email</label>
+                            <input type="email" id="contactEmail" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="contactMessage">Message</label>
+                            <textarea id="contactMessage" name="message" rows="5" required></textarea>
+                        </div>
+                        <button type="submit" class="form-submit">Send Message</button>
+                    </form>
+                                -->
                     </div>
                 </div>
             </section>
