improved comments, added audio, project 3 set up

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             <section id="about" class="about-section">
                 <h2 class="section-title">About</h2>
                 <div class="about-content">
-                    <p class="about-text">Cybersecurity professional and software developer specializing in developing digital forensics, investigative tools and security solutions.</p>
+                    <p class="about-text">Cybersecurity Student and software developer specializing in developing digital forensics, investigative tools and security solutions. Holding an A.S. in computer science and in the senior year of getting my B.S. in cyber security.</p>
                     <div class="skills-grid">
                         <div class="skill-category">
-                            <h3>Languages</h3>
+                            <h3>Programming Languages</h3>
                             <div class="skill-items">
-                                <span class="skill-item">Rust</span>
+                                <span class="skill-item">RUST</span>
                                 <span class="skill-item">Go</span>
                                 <span class="skill-item">Python</span>
                                 <span class="skill-item">JavaScript</span>
@@ -64,6 +64,7 @@
                                 <span class="skill-item">OpenLayers</span>
                                 <span class="skill-item">Git</span>
                                 <span class="skill-item">Docker</span>
+                                <span class="skill-item">Kubernetes</span>
                                 <span class="skill-item">Linux</span>
                             </div>
                         </div>
@@ -87,19 +88,21 @@
                         </div>
                     </a>
                     <div class="project-card modal-trigger" data-project="2">
-                        <img src="..." alt="Project 2" class="project-image">
+                        <!-- <img src="images/D4T.png" alt="Project 2" class="project-image"> -->
                         <div class="project-overlay">
                             <h3 data-text="#002">D4T</h3>
                         </div>
                     </div>
-                    <div class="project-card">
-                        <img src="..." alt="Project 3" class="project-image">
-                        <div class="project-overlay">
-                            <h3 data-text="#003">#003</h3>
+                    <a href="https://github.com/AJ-I-I/Metadata-Analysis" target="_blank" rel="noopener noreferrer" class="project-card-link">
+                        <div class="project-card">
+                            <img src="images/screenshotMDA.png" alt="Project 3" class="project-image">
+                            <div class="project-overlay">
+                                <h3 data-text="#003">Image metadata analysis</h3>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                     <div class="project-card modal-trigger" data-project="4">
-                        <img src="..." alt="Project 4" class="project-image">
+                        <!-- <img src="images/P4.png" alt="Project 4" class="project-image"> -->
                         <div class="project-overlay">
                             <h3 data-text="#004">#004</h3>
                         </div>
