--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                                 <span class="skill-item">Go</span>
                                 <span class="skill-item">Python</span>
                                 <span class="skill-item">JavaScript</span>
-                                <span class="skill-item">TypeScript</span>
                                 <span class="skill-item">C</span>
                             </div>
                         </div>
@@ -88,7 +87,6 @@
                         </div>
                     </a>
                     <div class="project-card modal-trigger" data-project="2">
-                        <!-- <img src="images/D4T.png" alt="Project 2" class="project-image"> -->
                         <div class="project-overlay">
                             <h3 data-text="#002">D4T</h3>
                         </div>
@@ -102,7 +100,6 @@
                         </div>
                     </a>
                     <div class="project-card modal-trigger" data-project="4">
-                        <!-- <img src="images/P4.png" alt="Project 4" class="project-image"> -->
                         <div class="project-overlay">
                             <h3 data-text="#004">#004</h3>
                         </div>
@@ -129,23 +126,6 @@
                                 <span class="social-text">LinkedIn Profile</span>
                             </a>
                         </div>
-                        <!--
-                        <form id="contactForm" class="contact-form">
-                        <div class="form-group">
-                            <label for="contactName">Name</label>
-                            <input type="text" id="contactName" name="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="contactEmail">Email</label>
-                            <input type="email" id="contactEmail" name="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="contactMessage">Message</label>
-                            <textarea id="contactMessage" name="message" rows="5" required></textarea>
-                        </div>
-                        <button type="submit" class="form-submit">Send Message</button>
-                    </form>
-                                -->
                     </div>
                 </div>
             </section>
@@ -155,12 +135,11 @@
     <div id="projectModal" class="modal">
         <div class="modal-content">
             <span class="modal-close">&times;</span>
-            <div class="modal-header" id="modalHeader"></div>
-            <div class="modal-body" id="modalBody"></div>
+            <div id="modalHeader" class="modal-header"></div>
+            <div id="modalBody" class="modal-body"></div>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
-
