resolved minor errors

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JONES</title>
+    <link rel="icon" href="data:,">
     <link rel="stylesheet" href="dark.css" id="theme-stylesheet">
     <link rel="stylesheet" href="mountain.css" id="mountain-stylesheet" disabled>
 </head>
