--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                         </div>
                     </a>
                     <div class="project-card modal-trigger" data-project="2">
+                        <img src="images/screenshotD4T.png" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                             <h3 data-text="#002">D4T</h3>
                         </div>
@@ -100,11 +101,13 @@
                             </div>
                         </div>
                     </a>
+                    <!--
                     <div class="project-card modal-trigger" data-project="4">
                         <div class="project-overlay">
                             <h3 data-text="#004">#004</h3>
                         </div>
                     </div>
+                    -->
                 </div>
             </section>
 
