js and html updates

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                                 <span class="skill-item">Python</span>
                                 <span class="skill-item">JavaScript</span>
                                 <span class="skill-item">C</span>
+                                <span class="skill-item">html/css</span>
                             </div>
                         </div>
                         <div class="skill-category">
