--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <audio id="mountainAudio" src="audio/mountain.mp3"></audio>
         </div>
 
-        <button id="themeToggle" class="theme-toggle">Mountain Mode</button>
+        <!-- <button id="themeToggle" class="theme-toggle">Mountain Mode</button> -->
 
         <main>
             <section id="about" class="about-section">
@@ -76,6 +76,13 @@
             <section class="projects-section">
                 <h2 class="section-title">Projects</h2>
                 <div class="projects-grid">
+                    <div class="project-card modal-trigger" data-project="4">
+                        <img src="images/ScreenshotRADW.png" alt="Project 4" class="project-image">
+                        <div class="project-overlay">
+                            <h3 data-text="#004">RAD-W</h3>
+                            <p class="project-description" data-text="Terminal based live coding tool">Terminal based live coding tool</p>
+                        </div>
+                    </div>
                     <a href="https://github.com/AJ-I-I/Steganography-Program" target="_blank" rel="noopener noreferrer" class="project-card-link">
                         <div class="project-card">
                             <div class="project-content">
@@ -102,13 +109,6 @@
                             </div>
                         </div>
                     </a>
-                    <!--
-                    <div class="project-card modal-trigger" data-project="4">
-                        <div class="project-overlay">
-                            <h3 data-text="#004">#004</h3>
-                        </div>
-                    </div>
-                    -->
                 </div>
             </section>
 
