--- a/index.html
+++ b/index.html
@@ -76,13 +76,18 @@
             <section class="projects-section">
                 <h2 class="section-title">Projects</h2>
                 <div class="projects-grid">
-                    <div class="project-card modal-trigger" data-project="4">
-                        <img src="images/ScreenshotRADW.png" alt="Project 4" class="project-image">
-                        <div class="project-overlay">
-                            <h3 data-text="#004">RAD-W</h3>
-                            <p class="project-description" data-text="Terminal based live coding tool">Terminal based live coding tool</p>
+                    <a href="https://github.com/AJ-I-I/RAD-W" target="_blank" rel="noopener noreferrer" class="project-card-link">
+                        <div class="project-card">
+                            <div class="project-content">
+                                <div class="project-icon"></div>
+                                <img src="images/screenshotRADW.png" alt="Project 4" class="project-image">
+                                <div class="project-overlay">
+                                    <h3 data-text="RAD-W">RAD-W</h3>
+                                    <p class="project-description" data-text="Terminal based live coding tool">Terminal based live coding tool</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                     <a href="https://github.com/AJ-I-I/Steganography-Program" target="_blank" rel="noopener noreferrer" class="project-card-link">
                         <div class="project-card">
                             <div class="project-content">
@@ -95,17 +100,26 @@
                             </div>
                         </div>
                     </a>
-                    <div class="project-card modal-trigger" data-project="2">
-                        <img src="images/ScreenshotD4T.png" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                            <h3 data-text="#002">D4T</h3>
+                    <a href="#d4t-modal" class="project-card-link">
+                        <div class="project-card">
+                            <div class="project-content">
+                                <div class="project-icon"></div>
+                                <img src="images/ScreenshotD4T.png" alt="Project 2" class="project-image">
+                                <div class="project-overlay">
+                                    <h3 data-text="#002">D4T</h3>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                     <a href="https://github.com/AJ-I-I/Metadata-Analysis" target="_blank" rel="noopener noreferrer" class="project-card-link">
                         <div class="project-card">
+                            <div class="project-content">
+                                <div class="project-icon"></div>
                             <img src="images/screenshotMDA.png" alt="Project 3" class="project-image">
                             <div class="project-overlay">
-                                <h3 data-text="#003">Image metadata analysis</h3>
+                                <h3 data-text="#003">Image-TL</h3>
+                                <p class="project-description" data-text="Image metadata analysis tool">Image metadata analysis tool</p>
+                            </div>
                             </div>
                         </div>
                     </a>
@@ -137,11 +151,11 @@
         </main>
     </div>
 
-    <div id="projectModal" class="modal">
+    <div id="d4t-modal" class="modal">
         <div class="modal-content">
-            <span class="modal-close">&times;</span>
-            <div id="modalHeader" class="modal-header"></div>
-            <div id="modalBody" class="modal-body"></div>
+            <a href="#" class="modal-close">&times;</a>
+            <div class="modal-header">D4T</div>
+            <div class="modal-body">D4T is an open-source intelligence and digital forensic tool. Its backend components, image and data forensics modules are written in RUST, with web scraping scripts for social media written in GO and Python. The front end utilizes JS, HTML, CSS, the AngularJS framework, and WebAssembly. Additional Modules: OpenLayers map that plots relevant areas based on search, timeline constructor, RUST data search (searches and webscrapes csv, json files full of links to local, state, federal courts, with jail/prison rosters, missing persons data). *This is a private project repo. Source code is not publicly available.*</div>
         </div>
     </div>
 
